Update inactive.html for exam availability message

--- a/inactive.html
+++ b/inactive.html
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <h1>⛔ EXAM CLOSED</h1>
-    <p>The exam is available only between 9 PM and 12 AM.</p>
-  </body>
+<head>
+  <title>Exam Closed</title>
+</head>
+<body style="display:flex;justify-content:center;align-items:center;height:100vh;font-family:sans-serif">
+  <div>
+    <h1>Exam Not Available</h1>
+    <p>The exam is open only from 9:00 PM to 12:00 AM IST.</p>
+  </div>
+</body>
 </html>
